--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API for Battle-Judge",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mariadb": "^3.0.2",
     "mongoose": "^6.8.2",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
