--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "jest": "^29.3.1"
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.18",
+    "jest": "^29.3.1",
+    "typescript": "^4.9.4"
   }
 }
