--- a/package.json
+++ b/package.json
@@ -26,9 +26,6 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.15",
-    "@types/node": "^18.11.18",
-    "jest": "^29.3.1",
-    "typescript": "^4.9.4"
+    "jest": "^29.3.1"
   }
 }
