--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "jest": "^29.3.1"
+    "jest": "^29.3.1",
+    "supertest": "^6.3.3"
   }
 }
