--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API for Battle-Judge",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --detectOpenHandles",
     "start": "node index.js"
   },
   "author": "",
