--- a/package.json
+++ b/package.json
@@ -26,7 +26,17 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.3.1",
+    "lint-staged": "^13.1.0",
+    "prettier": "2.8.3",
+    "standard": "^17.0.0",
     "supertest": "^6.3.3"
   }
 }
