--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -8,5 +8,7 @@ overrides: []
 parserOptions:
   ecmaVersion: latest
 rules:
-  space-before-function-paren: ['error', 'never']
-  curly: 'multi'
+  space-before-function-paren:
+    ['error', { anonymous: 'always', named: 'never', asyncArrow: 'always' }]
+  curly: ['error', 'multi']
+  semi: ['error', 'always']
