--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
+    "husky": "^8.0.0",
     "jest": "^29.3.1",
     "lint-staged": "^13.1.0",
     "prettier": "2.8.3",
     "standard": "^17.0.0",
-    "supertest": "^6.3.3",
-    "husky": "^8.0.0"
+    "supertest": "^6.3.3"
   }
 }
