feat: docker-compose

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -7,6 +7,7 @@ extends: standard
 overrides: []
 parserOptions:
   ecmaVersion: latest
+ignorePatterns: ['mongo-init.js']
 rules:
   space-before-function-paren:
     ['error', { anonymous: 'always', named: 'never', asyncArrow: 'always' }]
