--- a/.gitignore
+++ b/.gitignore
@@ -419,4 +419,5 @@ $RECYCLE.BIN/
 # and uncomment the following lines
 # .pnp.*
 
-# End of https://www.toptal.com/developers/gitignore/api/node,yarn,webstorm+all,visualstudiocode,emacs,vim,notepadpp,windows,macos,linux
+# custom
+db/data/*
