--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -4,7 +4,7 @@
 # You can adjust the behavior by modifying this file.
 # For more information, see:
 # https://github.com/github/super-linter
-name: Lint and Prettier
+name: Lint check
 
 on:
   push:
@@ -12,7 +12,7 @@ on:
   pull_request:
     branches: [ "main" ]
 jobs:
-  run-format-and-lint:
+  run-lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -32,6 +32,3 @@ jobs:
           JAVASCRIPT_DEFAULT_STYLE: prettier
           JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.yml
           VALIDATE_JAVASCRIPT_ES: true
-      - name: Format check
-        run: npm run check:format
-        
