--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest --detectOpenHandles --passWithNoTests",
     "start": "node index.js",
     "prepare": "husky install",
-    "check:format": "prettier --check \"src/**/*.js\""
+    "check:format": "./node_modules/.bin/prettier --check src/**/*.js",
+    "check:lint": "./node_modules/.bin/eslint ./src/**/*.js --quiet "
   },
   "author": "",
   "license": "ISC",
