--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.28.0",
+    "socket.io": "^4.6.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
