--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest --detectOpenHandles --passWithNoTests",
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "prepare": "husky install",
     "check:format": ".\\node_modules\\.bin\\prettier --check src\\**\\*.js",
     "check:lint": ".\\node_modules\\.bin\\eslint .\\src\\**\\*.js --quiet ",
@@ -22,7 +23,7 @@
     "jsonwebtoken": "^9.0.0",
     "mariadb": "^3.0.2",
     "mongoose": "^6.8.2",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
