--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -21,14 +21,6 @@ jobs:
           # Full git history is needed to get a proper list of changed files within `super-linter`
           fetch-depth: 0
 
-      - name: Lint check
-        uses: github/super-linter@v4
-        env:
-          VALIDATE_ALL_CODEBASE: false
-          DEFAULT_BRANCH: "main"
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
-          LINTER_RULES_PATH: /
-          JAVASCRIPT_DEFAULT_STYLE: prettier
-          JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.yml
-          VALIDATE_JAVASCRIPT_ES: true
+      - name: Lint Action
+        uses: wearerequired/lint-action@v2.3.0
+
