--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,14 @@
-node_modules
+**/node_modules/
+**/dist
+.git
 npm-debug.log
-.husky/
+.coverage
+.coverage.*
+
+npm-debug.log
+.husky
 .eslint*
 .prettier*
-lint-staged.config.js
-jest.config.js
+*.config.js
 *.log
+README.md
